changes during lesson
almost finished
need to add real text

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         <p>Aliquam id diam maecenas ultricies. Dolor sit amet consectetur adipiscing elit duis tristique. Aliquet enim tortor at auctor. Ac tortor dignissim convallis aenean et tortor at. Nulla facilisi etiam dignissim diam quis enim lobortis. Ac turpis egestas sed tempus urna et pharetra. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et. In nibh mauris cursus mattis molestie a iaculis. Ipsum suspendisse ultrices gravida dictum fusce ut placerat orci nulla. Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam. Tristique senectus et netus et. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Pharetra diam sit amet nisl suscipit adipiscing. Fames ac turpis egestas sed.</p>
       </article>
     </section>
+    <footer>
+      <section id="ftr-left">
+        <p>BY THEO JOHANSSON</p>
+      </section>
+      <section id="ftr-right">
+        <p>FOR WEBWEB 1</p>
+      </section>
+    </footer>
   </main>
 </body>
 </html>
