--- a/index.html
+++ b/index.html
@@ -1,32 +1,53 @@
 <!doctype html>
-<html>
+<html lang="sv">
 <head>
   <meta charset="utf-8">
   <link href="style.css" rel="stylesheet">
-  <title>VELVET BUZZSAW</title>
+  <link href="fonts/fonts.css" rel="stylesheet">
+  <title>Underwater</title>
 </head>
 <body>
   <main>
     <header>
-      <h1>VELVET BUZZSAW</h1>
+      <h1>Underwater</h1>
     </header>
-    <section id="content">
-      <article>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Aliquet risus feugiat in ante metus dictum. Sit amet luctus venenatis lectus magna fringilla urna porttitor rhoncus. Aliquam nulla facilisi cras fermentum. Convallis tellus id interdum velit. Risus feugiat in ante metus. Sed elementum tempus egestas sed sed risus. Felis eget nunc lobortis mattis aliquam faucibus purus in massa. Felis bibendum ut tristique et egestas quis ipsum suspendisse. Eu feugiat pretium nibh ipsum. Molestie at elementum eu facilisis sed odio morbi. Quis commodo odio aenean sed adipiscing diam donec. Turpis massa tincidunt dui ut ornare. Quis enim lobortis scelerisque fermentum dui. Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque. Nunc consequat interdum varius sit amet mattis vulputate. A diam sollicitudin tempor id eu nisl nunc. Imperdiet dui accumsan sit amet nulla facilisi morbi. At tellus at urna condimentum mattis pellentesque id nibh.</p>
-      </article>
-      <article>
-        <img src="imgs/velvet_buzzsaw_banner.jpg" alt="Jake Gyllenhall Velvet Buzzsaw">
-      </article>
-      <article>
-        <p>Aliquam id diam maecenas ultricies. Dolor sit amet consectetur adipiscing elit duis tristique. Aliquet enim tortor at auctor. Ac tortor dignissim convallis aenean et tortor at. Nulla facilisi etiam dignissim diam quis enim lobortis. Ac turpis egestas sed tempus urna et pharetra. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et. In nibh mauris cursus mattis molestie a iaculis. Ipsum suspendisse ultrices gravida dictum fusce ut placerat orci nulla. Viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam. Tristique senectus et netus et. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Pharetra diam sit amet nisl suscipit adipiscing. Fames ac turpis egestas sed.</p>
-      </article>
-    </section>
-    <footer>
-      <section id="ftr-left">
-        <p>BY THEO JOHANSSON</p>
+    <article id="content">
+      <section>
+        <h2>Om Filmen</h2>
+        <p>Underwater är en skräckfilm som släpptes den 8 januari 2020, filmen skulle egentligen släppas 2017 men det datumet försenades på obestämd tid på grund av Disneys och Foxs
+          företagssammanslagning, men nu blir den en av de sista filmerna som släpps under namnet 20th Centry Fox då deras namn byts till 20th Centry Studios. Filmen har en väldigt kort rollista eftersom att filmen fokuserar på en liten grupp som försöker att överleva en katastrof. Du ser hela rollistan nedan.</p>
       </section>
-      <section id="ftr-right">
-        <p>FOR WEBWEB 1</p>
+      <section>
+        <h2>Rollista:</h2>
+        <ul>
+          <li><a href="https://www.imdb.com/name/nm0829576/" target="_blank">Kristen Stewart <span class="tooltip">IMDB Profil</span></a></li>
+          <li><a href="https://www.imdb.com/name/nm0001993/" target="_blank">Vincent Cassel <span class="tooltip">IMDB Profil</span></a></li>
+          <li><a href="https://www.imdb.com/name/nm2554352/" target="_blank">T.J. Miller <span class="tooltip">IMDB Profil</span></a></li>
+          <li><a href="https://www.imdb.com/name/nm3725055/" target="_blank">Jessica Henwick <span class="tooltip">IMDB Profil</span></a></li>
+          <li><a href="https://www.imdb.com/name/nm0302330/" target="_blank">John Gallagher Jr. <span class="tooltip">IMDB Profil</span></a></li>
+          <li><a href="https://www.imdb.com/name/nm6974206/" target="_blank">Mamoudou Athie <span class="tooltip">IMDB Profil</span></a></li>
+          <li><a href="https://www.imdb.com/name/nm2322406/" target="_blank">Gunner Wright <span class="tooltip">IMDB Profil</span></a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Om Handlingen</h2>
+        <p>Handlingen är väldigt inspirerad av <a href="https://www.imdb.com/title/tt0078748/" target="_blank">Alien (1986)</a> och flera andra överlevnadsskräckfilmer från 80-talet. Underwater utspelar sig i närframtiden på botten av marinergraven. Där har företaget Tian Industries byggt flera djuphavsborr som används både kommersiellt och för forskning, filmen utspelar sig på två av dessa borr: Kepler 822 och Roebuck 641. I förtexterna så visas flera nyhetsartiklar som talar om underliga iakktagelser som har skett nära borren sedan börjar filmen på Kepler 822 där Stewarts karaktär Norah Price berättar om sin avlidna fästman innan Kepler 822 blir allvarligt skadad och börjar kollapsa.</p>
+      </section>
+      <section>
+        <img src="imgs/underwater-banner.jpg" alt="Underwater Banner">
+      </section>
+      <section>
+        <h2>Tankar om Filmen</h2>
+        <p>Det var en väldigt underhållande film men jag tyckte den misslyckades på vissa fronter: karaktärsetablering och världsbyggande. Karaktärerna fick aldrig någon tid att etableras vilket fick en att inte bry sig så mycket om dem, anledningen till att de inte kändes särskilt etablerade beror på att filmen börjar direkt i katastrofen till skillnad från <a href="https://www.imdb.com/title/tt0078748/" target="_blank">Alien (1986)</a> som de inspirerades av, där började filmen med att visa hur besättningen arbetar så att man har tid att bilda någon form av koppling till karaktärerna. Världsbyggandet hade kunnat vara så mycket mer intressant då filmen är även baserat by myckat av H.P. Lovecrafts litteratur och <em>!SPOILER!</em> monstret som orsakade katastrofen ssade ressigören själv att det var Cthulhu, så istället för att göra undervattens Godzilla blandat med Alien så hade de kunnat luta sig mer på Lovecrafts mytologi. Till exempel när Price var på Shepard Station så såg hon några konstiga ritningar och symboler i ett skåp, istället för att ignorera dessa så blir hon besatt av dem och hennes sinnestillstånd börjar snabbt att degenerera och mot slutet så offrar hon överlevarna till Cthulhu innan den förstör Roebuck och precis innan eftertexterna så får hon och tittarna se en glimps av R'lyeh kvar på botten av havet innan Cthulhu somnar igen. I eftertexterna så hade man fortfarande kunnat ha implikationerna att Tian Industries kommer tillbaka för att väcka Cthulhu på riktigt. Det blir ett dystrare slut men ett slut som passsar den kosmiska skräcken var inspirerade av.</p>
+        <p>TL;DR: Jag gillade filmen men den hade kunnat vara mycket bättre om de lutade sig mer på kopplingarna till H.P Lovecraft</p>
+      </section>
+    </article>
+    <footer>
+      <section id="footer-left">
+        <p>Posted by Theo Johansson</p>
+      </section>
+      <section id="footer-right">
+        <p>Made for WEBWEB1</p>
       </section>
     </footer>
   </main>
