--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!--This was made for a Webdevelopment course on Pauligymnasium in Malmö Sweden. By: Theo Johansson. Class: TE17TE-->
 <html lang="sv">
 <head>
   <meta charset="utf-8">
